类（记录、匿名类型、泛型类）、接口、索引器

--- a/CSharpBasic/CSharpBasic.csproj
+++ b/CSharpBasic/CSharpBasic.csproj
@@ -89,6 +89,8 @@
     <Compile Include="code\Try_catch.cs" />
     <Compile Include="code\Try_catch2.cs" />
     <Compile Include="code\Virtual.cs" />
+    <Compile Include="Indexer.cs" />
+    <Compile Include="Interface.cs" />
     <Compile Include="PartialClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
