--- a/CSharpBasic/CSharpBasic.csproj
+++ b/CSharpBasic/CSharpBasic.csproj
@@ -74,7 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AClass.cs" />
+    <Compile Include="code\AClass.cs" />
     <Compile Include="code\ConstructorFunc.cs" />
     <Compile Include="code\Delegate.cs" />
     <Compile Include="code\Equals.cs" />
@@ -85,15 +85,16 @@
     <Compile Include="code\Modifier.cs" />
     <Compile Include="code\New.cs" />
     <Compile Include="code\Out.cs" />
+    <Compile Include="code\Polymorphic.cs" />
     <Compile Include="code\Static.cs" />
     <Compile Include="code\Switch.cs" />
     <Compile Include="code\Try_catch.cs" />
     <Compile Include="code\Try_catch2.cs" />
     <Compile Include="code\Try_catch3.cs" />
     <Compile Include="code\Virtual.cs" />
-    <Compile Include="Indexer.cs" />
-    <Compile Include="Interface.cs" />
-    <Compile Include="PartialClass.cs" />
+    <Compile Include="code\Indexer.cs" />
+    <Compile Include="code\Interface.cs" />
+    <Compile Include="code\PartialClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="code\Boxing_unboxing.cs" />
