--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /CSharpBasicConsole/bin
 /WindowsFormsApp/bin
 /WindowsFormsApp/obj
+/.vs/CSharpBasic/FileContentIndex
+/.vs/CSharpBasic/v17
+/.vs/ProjectEvaluation
